[build-system]
requires = [
    "setuptools>=78.1.1,<=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "cx_Logging"
description = "Python and C interfaces for logging"
readme = "README.txt"
authors = [{name = "Anthony Tuininga", email = "anthony.tuininga@gmail.com"}]
keywords = ["logging"]
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/anthony-tuininga/cx_Logging"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.cibuildwheel]
build-verbosity = 1
skip = "cp3*-musllinux_*"
