[metadata]
name = cx_Logging
description = Python and C interfaces for logging
long_description = file: README.txt
author = Anthony Tuininga
author_email = anthony.tuininga@gmail.com
url = http://cx-logging.sourceforge.net
keywords = logging
license = Python Software Foundation License
license_files =
    LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Python Software Foundation License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
python_requires = >=3.6
zip_safe = False
